# mock-interview

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: design.md  plan-1-backend-core.md
src/mockinterview/: __init__.py  config.py  document_loader.py  intake.py  llm.py  planner.py  schemas.py
tests/: __init__.py  conftest.py  test_config.py  test_document_loader.py  test_intake.py  test_llm.py  test_planner.py  test_schemas.py
