[project]
name = "mockinterview"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "wujing2", email = "wujing2@mokahr.com" }
]
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.109.1",
    "fastapi>=0.136.3",
    "langgraph>=1.2.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pypdf>=6.13.2",
    "python-docx>=1.2.0",
    "uvicorn[standard]>=0.49.0",
]

[project.scripts]
mockinterview = "mockinterview:main"

[build-system]
requires = ["uv_build>=0.11.1,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
]
